projects/crql-compiler/src/lib/grammar/.antlr/CRQLParser.java
// Generated from /Users/benjaminhofstetter/code/benjamin/rdf-query-language/projects/crql-compiler/src/lib/grammar/CRQL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CRQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AT_PREFIX=1, AT_CUSTOM_SELECTOR=2, AT_MIXIN=3, AT_GET=4, AT_WHERE=5, AT_LANG=6, 
		AT_LIMIT=7, AT_OFFSET=8, AT_ORDER_BY=9, AT_VALUES=10, AT_BIND=11, AT_SELECT=12, 
		FILTER=13, VALUES=14, BIND=15, SELECT=16, AS=17, LANG_KEY=18, ASC=19, 
		DESC=20, CUSTOM_SELECTOR_NAME=21, MIXIN_NAME=22, SPARQL_VAR=23, PARAM_VAR=24, 
		CURIE=25, IRI_REF=26, NUMBER_LITERAL=27, STRING_LITERAL=28, BOOLEAN_LITERAL=29, 
		IDENTIFIER=30, ARROW_RIGHT=31, LBRACE=32, RBRACE=33, LPAREN=34, RPAREN=35, 
		LBRACKET=36, RBRACKET=37, SEMI=38, DOT=39, COMMA=40, EQUALS=41, NOT_EQUALS=42, 
		GTE=43, LTE=44, GT=45, LT=46, COLON=47, SLASH=48, CARET=49, ASTERISK=50, 
		PLUS=51, WS=52, SL_COMMENT=53, ML_COMMENT=54;
	public static final int
		RULE_crqlDocument = 0, RULE_prefixDeclaration = 1, RULE_customSelectorDef = 2, 
		RULE_selectorName = 3, RULE_selectorBody = 4, RULE_mixinDef = 5, RULE_paramDefs = 6, 
		RULE_paramDef = 7, RULE_ruleBlock = 8, RULE_selectorExprList = 9, RULE_selectorExpr = 10, 
		RULE_attrFilter = 11, RULE_bodyBlock = 12, RULE_bodyItem = 13, RULE_propertyPattern = 14, 
		RULE_predicate = 15, RULE_targetPredicate = 16, RULE_langAttrFilter = 17, 
		RULE_getDirective = 18, RULE_nestedTraversal = 19, RULE_whereModifier = 20, 
		RULE_langDirective = 21, RULE_filterStmt = 22, RULE_filterExpr = 23, RULE_valuesBlock = 24, 
		RULE_valuesContent = 25, RULE_bindStmt = 26, RULE_subSelectBlock = 27, 
		RULE_pageDirective = 28, RULE_triplePattern = 29, RULE_pathExpr = 30, 
		RULE_objectExpr = 31, RULE_expr = 32, RULE_functionCall = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"crqlDocument", "prefixDeclaration", "customSelectorDef", "selectorName", 
			"selectorBody", "mixinDef", "paramDefs", "paramDef", "ruleBlock", "selectorExprList", 
			"selectorExpr", "attrFilter", "bodyBlock", "bodyItem", "propertyPattern", 
			"predicate", "targetPredicate", "langAttrFilter", "getDirective", "nestedTraversal", 
			"whereModifier", "langDirective", "filterStmt", "filterExpr", "valuesBlock", 
			"valuesContent", "bindStmt", "subSelectBlock", "pageDirective", "triplePattern", 
			"pathExpr", "objectExpr", "expr", "functionCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@prefix'", "'@custom-selector'", "'@mixin'", "'@get'", "'@where'", 
			"'@lang'", "'@limit'", "'@offset'", "'@order-by'", "'@values'", "'@bind'", 
			"'@select'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'=>'", "'{'", "'}'", 
			"'('", "')'", "'['", "']'", "';'", "'.'", "','", "'='", "'!='", "'>='", 
			"'<='", "'>'", "'<'", "':'", "'/'", "'^'", "'*'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AT_PREFIX", "AT_CUSTOM_SELECTOR", "AT_MIXIN", "AT_GET", "AT_WHERE", 
			"AT_LANG", "AT_LIMIT", "AT_OFFSET", "AT_ORDER_BY", "AT_VALUES", "AT_BIND", 
			"AT_SELECT", "FILTER", "VALUES", "BIND", "SELECT", "AS", "LANG_KEY", 
			"ASC", "DESC", "CUSTOM_SELECTOR_NAME", "MIXIN_NAME", "SPARQL_VAR", "PARAM_VAR", 
			"CURIE", "IRI_REF", "NUMBER_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
			"IDENTIFIER", "ARROW_RIGHT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "SEMI", "DOT", "COMMA", "EQUALS", "NOT_EQUALS", 
			"GTE", "LTE", "GT", "LT", "COLON", "SLASH", "CARET", "ASTERISK", "PLUS", 
			"WS", "SL_COMMENT", "ML_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CRQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CRQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CrqlDocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CRQLParser.EOF, 0); }
		public List<PrefixDeclarationContext> prefixDeclaration() {
			return getRuleContexts(PrefixDeclarationContext.class);
		}
		public PrefixDeclarationContext prefixDeclaration(int i) {
			return getRuleContext(PrefixDeclarationContext.class,i);
		}
		public List<CustomSelectorDefContext> customSelectorDef() {
			return getRuleContexts(CustomSelectorDefContext.class);
		}
		public CustomSelectorDefContext customSelectorDef(int i) {
			return getRuleContext(CustomSelectorDefContext.class,i);
		}
		public List<MixinDefContext> mixinDef() {
			return getRuleContexts(MixinDefContext.class);
		}
		public MixinDefContext mixinDef(int i) {
			return getRuleContext(MixinDefContext.class,i);
		}
		public List<RuleBlockContext> ruleBlock() {
			return getRuleContexts(RuleBlockContext.class);
		}
		public RuleBlockContext ruleBlock(int i) {
			return getRuleContext(RuleBlockContext.class,i);
		}
		public CrqlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_crqlDocument; }
	}

	public final CrqlDocumentContext crqlDocument() throws RecognitionException {
		CrqlDocumentContext _localctx = new CrqlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_crqlDocument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT_PREFIX) {
				{
				{
				setState(68);
				prefixDeclaration();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 140738564194316L) != 0)) {
				{
				setState(77);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AT_CUSTOM_SELECTOR:
					{
					setState(74);
					customSelectorDef();
					}
					break;
				case AT_MIXIN:
					{
					setState(75);
					mixinDef();
					}
					break;
				case CUSTOM_SELECTOR_NAME:
				case IDENTIFIER:
				case COLON:
					{
					setState(76);
					ruleBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrefixDeclarationContext extends ParserRuleContext {
		public TerminalNode AT_PREFIX() { return getToken(CRQLParser.AT_PREFIX, 0); }
		public TerminalNode IRI_REF() { return getToken(CRQLParser.IRI_REF, 0); }
		public TerminalNode SEMI() { return getToken(CRQLParser.SEMI, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CRQLParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(CRQLParser.COLON, 0); }
		public PrefixDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixDeclaration; }
	}

	public final PrefixDeclarationContext prefixDeclaration() throws RecognitionException {
		PrefixDeclarationContext _localctx = new PrefixDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prefixDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(AT_PREFIX);
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(85);
				match(IDENTIFIER);
				setState(86);
				match(COLON);
				}
				break;
			case COLON:
				{
				setState(87);
				match(COLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(90);
			match(IRI_REF);
			setState(91);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CustomSelectorDefContext extends ParserRuleContext {
		public TerminalNode AT_CUSTOM_SELECTOR() { return getToken(CRQLParser.AT_CUSTOM_SELECTOR, 0); }
		public SelectorNameContext selectorName() {
			return getRuleContext(SelectorNameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CRQLParser.LBRACE, 0); }
		public SelectorBodyContext selectorBody() {
			return getRuleContext(SelectorBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CRQLParser.RBRACE, 0); }
		public CustomSelectorDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customSelectorDef; }
	}

	public final CustomSelectorDefContext customSelectorDef() throws RecognitionException {
		CustomSelectorDefContext _localctx = new CustomSelectorDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_customSelectorDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(AT_CUSTOM_SELECTOR);
			setState(94);
			selectorName();
			setState(95);
			match(LBRACE);
			setState(96);
			selectorBody();
			setState(97);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorNameContext extends ParserRuleContext {
		public TerminalNode CUSTOM_SELECTOR_NAME() { return getToken(CRQLParser.CUSTOM_SELECTOR_NAME, 0); }
		public TerminalNode COLON() { return getToken(CRQLParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CRQLParser.IDENTIFIER, 0); }
		public SelectorNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectorName; }
	}

	public final SelectorNameContext selectorName() throws RecognitionException {
		SelectorNameContext _localctx = new SelectorNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectorName);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CUSTOM_SELECTOR_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(CUSTOM_SELECTOR_NAME);
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(COLON);
				setState(101);
				match(IDENTIFIER);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorBodyContext extends ParserRuleContext {
		public List<TriplePatternContext> triplePattern() {
			return getRuleContexts(TriplePatternContext.class);
		}
		public TriplePatternContext triplePattern(int i) {
			return getRuleContext(TriplePatternContext.class,i);
		}
		public List<BindStmtContext> bindStmt() {
			return getRuleContexts(BindStmtContext.class);
		}
		public BindStmtContext bindStmt(int i) {
			return getRuleContext(BindStmtContext.class,i);
		}
		public List<FilterStmtContext> filterStmt() {
			return getRuleContexts(FilterStmtContext.class);
		}
		public FilterStmtContext filterStmt(int i) {
			return getRuleContext(FilterStmtContext.class,i);
		}
		public SelectorBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectorBody; }
	}

	public final SelectorBodyContext selectorBody() throws RecognitionException {
		SelectorBodyContext _localctx = new SelectorBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectorBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8431616L) != 0)) {
				{
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SPARQL_VAR:
					{
					setState(105);
					triplePattern();
					}
					break;
				case AT_BIND:
				case BIND:
					{
					setState(106);
					bindStmt();
					}
					break;
				case FILTER:
					{
					setState(107);
					filterStmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MixinDefContext extends ParserRuleContext {
		public TerminalNode AT_MIXIN() { return getToken(CRQLParser.AT_MIXIN, 0); }
		public TerminalNode MIXIN_NAME() { return getToken(CRQLParser.MIXIN_NAME, 0); }
		public TerminalNode LBRACE() { return getToken(CRQLParser.LBRACE, 0); }
		public BodyBlockContext bodyBlock() {
			return getRuleContext(BodyBlockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CRQLParser.RBRACE, 0); }
		public ParamDefsContext paramDefs() {
			return getRuleContext(ParamDefsContext.class,0);
		}
		public MixinDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mixinDef; }
	}

	public final MixinDefContext mixinDef() throws RecognitionException {
		MixinDefContext _localctx = new MixinDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mixinDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(AT_MIXIN);
			setState(114);
			match(MIXIN_NAME);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(115);
				paramDefs();
				}
			}

			setState(118);
			match(LBRACE);
			setState(119);
			bodyBlock();
			setState(120);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamDefsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(CRQLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CRQLParser.RPAREN, 0); }
		public List<ParamDefContext> paramDef() {
			return getRuleContexts(ParamDefContext.class);
		}
		public ParamDefContext paramDef(int i) {
			return getRuleContext(ParamDefContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CRQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CRQLParser.COMMA, i);
		}
		public ParamDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDefs; }
	}

	public final ParamDefsContext paramDefs() throws RecognitionException {
		ParamDefsContext _localctx = new ParamDefsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_paramDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(LPAREN);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPARQL_VAR || _la==PARAM_VAR) {
				{
				setState(123);
				paramDef();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(124);
					match(COMMA);
					setState(125);
					paramDef();
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(133);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamDefContext extends ParserRuleContext {
		public TerminalNode PARAM_VAR() { return getToken(CRQLParser.PARAM_VAR, 0); }
		public TerminalNode SPARQL_VAR() { return getToken(CRQLParser.SPARQL_VAR, 0); }
		public TerminalNode EQUALS() { return getToken(CRQLParser.EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParamDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDef; }
	}

	public final ParamDefContext paramDef() throws RecognitionException {
		ParamDefContext _localctx = new ParamDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_la = _input.LA(1);
			if ( !(_la==SPARQL_VAR || _la==PARAM_VAR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(136);
				match(EQUALS);
				setState(137);
				expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleBlockContext extends ParserRuleContext {
		public SelectorExprListContext selectorExprList() {
			return getRuleContext(SelectorExprListContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CRQLParser.LBRACE, 0); }
		public BodyBlockContext bodyBlock() {
			return getRuleContext(BodyBlockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CRQLParser.RBRACE, 0); }
		public RuleBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleBlock; }
	}

	public final RuleBlockContext ruleBlock() throws RecognitionException {
		RuleBlockContext _localctx = new RuleBlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ruleBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			selectorExprList();
			setState(141);
			match(LBRACE);
			setState(142);
			bodyBlock();
			setState(143);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorExprListContext extends ParserRuleContext {
		public List<SelectorExprContext> selectorExpr() {
			return getRuleContexts(SelectorExprContext.class);
		}
		public SelectorExprContext selectorExpr(int i) {
			return getRuleContext(SelectorExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CRQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CRQLParser.COMMA, i);
		}
		public SelectorExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectorExprList; }
	}

	public final SelectorExprListContext selectorExprList() throws RecognitionException {
		SelectorExprListContext _localctx = new SelectorExprListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_selectorExprList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			selectorExpr();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(146);
				match(COMMA);
				setState(147);
				selectorExpr();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorExprContext extends ParserRuleContext {
		public SelectorNameContext selectorName() {
			return getRuleContext(SelectorNameContext.class,0);
		}
		public List<AttrFilterContext> attrFilter() {
			return getRuleContexts(AttrFilterContext.class);
		}
		public AttrFilterContext attrFilter(int i) {
			return getRuleContext(AttrFilterContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(CRQLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CRQLParser.RPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CRQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CRQLParser.COMMA, i);
		}
		public SelectorExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectorExpr; }
	}

	public final SelectorExprContext selectorExpr() throws RecognitionException {
		SelectorExprContext _localctx = new SelectorExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_selectorExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			selectorName();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACKET) {
				{
				{
				setState(154);
				attrFilter();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(160);
				match(LPAREN);
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2139095040L) != 0)) {
					{
					setState(161);
					expr();
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(162);
						match(COMMA);
						setState(163);
						expr();
						}
						}
						setState(168);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(171);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
